@@ -5,10 +5,8 @@
  */
 package org.elasticsearch.xpack.security.rest.action.user;
 
-import org.apache.logging.log4j.LogManager;
 import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.bytes.BytesReference;
-import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
@@ -27,7 +25,6 @@ import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -37,7 +34,6 @@ import static org.elasticsearch.rest.RestRequest.Method.PUT;
 
 public class RestChangePasswordAction extends SecurityBaseRestHandler implements RestRequestFilter {
 
-    private static final DeprecationLogger deprecationLogger = new DeprecationLogger(LogManager.getLogger(RestChangePasswordAction.class));
     private final SecurityContext securityContext;
     private final Hasher passwordHasher;
 
@@ -55,16 +51,16 @@ public class RestChangePasswordAction extends SecurityBaseRestHandler implements
     @Override
     public List<ReplacedRoute> replacedRoutes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.unmodifiableList(Arrays.asList(
+        return List.of(
             new ReplacedRoute(PUT, "/_security/user/{username}/_password",
-                PUT, "/_xpack/security/user/{username}/_password", deprecationLogger),
+                PUT, "/_xpack/security/user/{username}/_password"),
             new ReplacedRoute(POST, "/_security/user/{username}/_password",
-                POST, "/_xpack/security/user/{username}/_password", deprecationLogger),
+                POST, "/_xpack/security/user/{username}/_password"),
             new ReplacedRoute(PUT, "/_security/user/_password",
-                PUT, "/_xpack/security/user/_password", deprecationLogger),
+                PUT, "/_xpack/security/user/_password"),
             new ReplacedRoute(POST, "/_security/user/_password",
-                POST, "/_xpack/security/user/_password", deprecationLogger)
-        ));
+                POST, "/_xpack/security/user/_password")
+        );
     }
 
     @Override
